--- a/05daum_news_scraping.ipynb
+++ b/05daum_news_scraping.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 33,
    "outputs": [
     {
      "name": "stdout",
@@ -137,14 +137,34 @@
     "    soup = BeautifulSoup(html,'html.parser')\n",
     "strong_tag_list = soup.select(\"strong[class='tit_g']\") ### select(\"strong.tit_g\") 도 가능하다 .은 class 찾는거 #은 id\n",
     "# print(a_tag_list)\n",
-    "\n",
+    "f = open('뉴스.txt','w')\n",
     "for strong_tag in strong_tag_list:\n",
     "    a_tag = strong_tag.select_one(\"a\") #select_one(\"tag이름\") 찾고싶은 tag이름 찾는거 -> 처음나온 태그 1개만 찾는다!\n",
     "                                       #seledt(\"tag이름\") 찾고싶은 tag이름 찾는거 -> 찾는 모든 tag찾음!\n",
     "    print(\"링크: \" + a_tag.get('href'))\n",
-    "    print(\"제목: \" + strong_tag.text.strip())\n",
-    "    print('-----------------------------------------')"
+    "    print(\"제목: \" + strong_tag.text.strip()) ## .text 와 .string 둘다 사용가능!\n",
+    "    print('-----------------------------------------')\n",
+    "    f.write(\"링크: \"+a_tag.get('href'))\n",
+    "    f.write('\\n')\n",
+    "    f.write(\"제목: \"+strong_tag.text.strip())\n",
+    "    f.write('\\n')\n",
+    "\n",
+    "f.close()\n",
+    "\n",
+    "\n"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
