--- a/05daum_news_scraping.ipynb
+++ b/05daum_news_scraping.ipynb
@@ -151,7 +151,11 @@
     "\n",
     "f.close()\n",
     "\n",
-    "\n"
+    "\n",
+    "## 실행파일 만드는법\n",
+    "## 터미널에 pip3 install pyinstaller\n",
+    "## 설치후 pyinstaller --onefile 파일명 을하면 exe 파일이 만들어진다.\n",
+    "## 실행후 프로젝트 폴더에 dist폴더에 생성된다."
    ],
    "metadata": {
     "collapsed": false,
