--- a/06melon100chart.ipynb
+++ b/06melon100chart.ipynb
@@ -28,115 +28,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'song_title': '사랑은 늘 도망가', 'song_id': '34061322', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=34061322'}\n",
-      "{'song_title': '취중고백', 'song_id': '34431086', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=34431086'}\n",
-      "{'song_title': '호랑수월가', 'song_id': '34535898', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=34535898'}\n",
-      "{'song_title': 'Step Back', 'song_id': '34494149', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=34494149'}\n",
-      "{'song_title': '회전목마 (Feat. Zion.T, 원슈타인) (Prod. Slom)', 'song_id': '34256568', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=34256568'}\n",
-      "{'song_title': 'ELEVEN', 'song_id': '34349913', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=34349913'}\n",
-      "{'song_title': '리무진 (Feat. MINO) (Prod. GRAY)', 'song_id': '34298499', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=34298499'}\n",
-      "{'song_title': 'Counting Stars (Feat. Beenzino)', 'song_id': '34398735', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=34398735'}\n",
-      "{'song_title': 'Dreams Come True', 'song_id': '34436674', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=34436674'}\n",
-      "{'song_title': '눈이 오잖아(Feat.헤이즈)', 'song_id': '34360855', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=34360855'}\n",
-      "{'song_title': '이제 나만 믿어요', 'song_id': '32508053', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=32508053'}\n",
-      "{'song_title': \"Can't Control Myself\", 'song_id': '34540831', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=34540831'}\n",
-      "{'song_title': '겨울잠', 'song_id': '34481682', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=34481682'}\n",
-      "{'song_title': '다정히 내 이름을 부르면', 'song_id': '33496587', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=33496587'}\n",
-      "{'song_title': '신호등', 'song_id': '33480898', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=33480898'}\n",
-      "{'song_title': '만남은 쉽고 이별은 어려워 (Feat. Leellamarz) (Prod. TOIL)', 'song_id': '34298496', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=34298496'}\n",
-      "{'song_title': 'STAY', 'song_id': '33658563', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=33658563'}\n",
-      "{'song_title': '다시 사랑한다면 (김필 Ver.)', 'song_id': '33514925', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=33514925'}\n",
-      "{'song_title': '그대라는 사치', 'song_id': '33652821', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=33652821'}\n",
-      "{'song_title': 'Next Level', 'song_id': '33487342', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=33487342'}\n",
-      "{'song_title': 'strawberry moon', 'song_id': '34101563', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=34101563'}\n",
-      "{'song_title': 'SMILEY (Feat. BIBI)', 'song_id': '34538515', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=34538515'}\n",
-      "{'song_title': 'Christmas Tree', 'song_id': '34461065', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=34461065'}\n",
-      "{'song_title': '별빛 같은 나의 사랑아', 'song_id': '33337651', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=33337651'}\n",
-      "{'song_title': '드라마', 'song_id': '34481680', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=34481680'}\n",
-      "{'song_title': '잊었니', 'song_id': '33606505', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=33606505'}\n",
-      "{'song_title': 'Savage', 'song_id': '34041584', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=34041584'}\n",
-      "{'song_title': '언덕나무', 'song_id': '34495462', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=34495462'}\n",
-      "{'song_title': 'HERO', 'song_id': '33036660', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=33036660'}\n",
-      "{'song_title': '끝사랑', 'song_id': '33630420', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=33630420'}\n",
-      "{'song_title': '우리가 헤어져야 했던 이유', 'song_id': '34399272', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=34399272'}\n",
-      "{'song_title': '서랍', 'song_id': '34373632', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=34373632'}\n",
-      "{'song_title': 'Bk Love', 'song_id': '33599821', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=33599821'}\n",
-      "{'song_title': '흰눈', 'song_id': '34397419', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=34397419'}\n",
-      "{'song_title': '너 아니면 안돼', 'song_id': '34592758', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=34592758'}\n",
-      "{'song_title': 'Butter', 'song_id': '33507137', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=33507137'}\n",
-      "{'song_title': '너를 생각해', 'song_id': '33978183', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=33978183'}\n",
-      "{'song_title': '사랑이 아니었다고 말하지 마요', 'song_id': '34513916', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=34513916'}\n",
-      "{'song_title': 'abcdefu', 'song_id': '33808429', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=33808429'}\n",
-      "{'song_title': 'Child', 'song_id': '34599641', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=34599641'}\n",
-      "{'song_title': 'OHAYO MY NIGHT', 'song_id': '32698101', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=32698101'}\n",
-      "{'song_title': 'Dynamite', 'song_id': '32872978', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=32872978'}\n",
-      "{'song_title': '계단말고 엘리베이터', 'song_id': '31254010', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=31254010'}\n",
-      "{'song_title': '네가 없는 밤 (Feat. ASH ISLAND) (Prod. GRAY)', 'song_id': '34366006', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=34366006'}\n",
-      "{'song_title': '불협화음 (Feat. AKMU) (Prod. GRAY)', 'song_id': '34331506', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=34331506'}\n",
-      "{'song_title': 'Permission to Dance', 'song_id': '33666269', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=33666269'}\n",
-      "{'song_title': '문득', 'song_id': '33448767', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=33448767'}\n",
-      "{'song_title': '여름비', 'song_id': '34514465', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=34514465'}\n",
-      "{'song_title': '바라만 본다', 'song_id': '33625988', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=33625988'}\n",
-      "{'song_title': 'My Universe', 'song_id': '33998510', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=33998510'}\n",
-      "{'song_title': 'Weekend', 'song_id': '33655994', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=33655994'}\n",
-      "{'song_title': '쉬어 (Feat. MINO) (Prod. GRAY)', 'song_id': '34215822', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=34215822'}\n",
-      "{'song_title': 'Celebrity', 'song_id': '33239419', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=33239419'}\n",
-      "{'song_title': '낙하 (with 아이유)', 'song_id': '33725775', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=33725775'}\n",
-      "{'song_title': 'Wake Up (Prod. 코드 쿤스트)', 'song_id': '34215821', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=34215821'}\n",
-      "{'song_title': '그게 더 편할 것 같아 (N번째 연애 X 멜로망스)', 'song_id': '34326186', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=34326186'}\n",
-      "{'song_title': \"Good Night (Feat. BE'O)\", 'song_id': '34562040', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=34562040'}\n",
-      "{'song_title': '이별후회', 'song_id': '34437341', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=34437341'}\n",
-      "{'song_title': '라일락', 'song_id': '33372781', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=33372781'}\n",
-      "{'song_title': '밤하늘의 별을(2020)', 'song_id': '33061995', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=33061995'}\n",
-      "{'song_title': '헤픈 우연', 'song_id': '33503722', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=33503722'}\n",
-      "{'song_title': 'Bad Habits', 'song_id': '33623210', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=33623210'}\n",
-      "{'song_title': '사이렌 Remix (Feat. UNEDUCATED KID, Paul Blanco)', 'song_id': '33359725', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=33359725'}\n",
-      "{'song_title': '강변북로', 'song_id': '34598904', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=34598904'}\n",
-      "{'song_title': '찰나가 영원이 될 때 (The Eternal Moment)', 'song_id': '33976677', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=33976677'}\n",
-      "{'song_title': '어떻게 이별까지 사랑하겠어, 널 사랑하는 거지', 'song_id': '32061975', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=32061975'}\n",
-      "{'song_title': '모든 날, 모든 순간 (Every day, Every Moment)', 'song_id': '30962526', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=30962526'}\n",
-      "{'song_title': '고백', 'song_id': '33868791', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=33868791'}\n",
-      "{'song_title': '내 손을 잡아', 'song_id': '3414749', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=3414749'}\n",
-      "{'song_title': 'DM', 'song_id': '34539150', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=34539150'}\n",
-      "{'song_title': '대낮에 한 이별', 'song_id': '34596035', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=34596035'}\n",
-      "{'song_title': 'Off My Face', 'song_id': '33359309', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=33359309'}\n",
-      "{'song_title': '안녕 우린 헤어져야만 해', 'song_id': '34465082', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=34465082'}\n",
-      "{'song_title': '너의 모든 순간', 'song_id': '4446485', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=4446485'}\n",
-      "{'song_title': '추억은 만남보다 이별에 남아', 'song_id': '33248758', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=33248758'}\n",
-      "{'song_title': 'Because', 'song_id': '34564047', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=34564047'}\n",
-      "{'song_title': \"롤린 (Rollin')\", 'song_id': '30287019', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=30287019'}\n",
-      "{'song_title': '봄날', 'song_id': '30244931', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=30244931'}\n",
-      "{'song_title': 'Dun Dun Dance', 'song_id': '33464805', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=33464805'}\n",
-      "{'song_title': '밝게 빛나는 별이 되어 비춰줄게', 'song_id': '33167063', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=33167063'}\n",
-      "{'song_title': 'Blueming', 'song_id': '32183386', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=32183386'}\n",
-      "{'song_title': '오늘도 빛나는 너에게 (To You My Light) (Feat.이라온)', 'song_id': '31853557', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=31853557'}\n",
-      "{'song_title': '작은 것들을 위한 시 (Boy With Luv) (Feat. Halsey)', 'song_id': '31737197', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=31737197'}\n",
-      "{'song_title': \"검정색하트 (Feat. Leellamarz, BE'O)\", 'song_id': '34588190', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=34588190'}\n",
-      "{'song_title': '취기를 빌려 (취향저격 그녀 X 산들)', 'song_id': '32794652', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=32794652'}\n",
-      "{'song_title': '그날에 나는 맘이 편했을까', 'song_id': '33107649', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=33107649'}\n",
-      "{'song_title': '시간을 거슬러 (낮에 뜨는 달 X 케이윌)', 'song_id': '33878014', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=33878014'}\n",
-      "{'song_title': '오묘해', 'song_id': '34536107', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=34536107'}\n",
-      "{'song_title': 'Savage Love (Laxed - Siren Beat) (BTS Remix)', 'song_id': '32962258', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=32962258'}\n",
-      "{'song_title': '비가 오는 날엔 (2021)', 'song_id': '33759183', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=33759183'}\n",
-      "{'song_title': 'Queendom', 'song_id': '33805289', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=33805289'}\n",
-      "{'song_title': 'WA DA DA', 'song_id': '34491913', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=34491913'}\n",
-      "{'song_title': '멜로디', 'song_id': '33315511', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=33315511'}\n",
-      "{'song_title': '못해준 게 많아서', 'song_id': '34598809', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=34598809'}\n",
-      "{'song_title': 'Life Goes On', 'song_id': '33077234', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=33077234'}\n",
-      "{'song_title': '좋아좋아', 'song_id': '33691794', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=33691794'}\n",
-      "{'song_title': '나 그댈위해 시 한편을 쓰겠어', 'song_id': '34171026', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=34171026'}\n",
-      "{'song_title': '깨우지 마', 'song_id': '34553700', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=34553700'}\n",
-      "{'song_title': 'Still I Love You', 'song_id': '34431340', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=34431340'}\n",
-      "{'song_title': 'MBTI (Feat. 쿠기 & 로꼬) (Prod. GRAY)', 'song_id': '34331510', 'song_detail_url': 'https://www.melon.com/song/detail.htm?songId=34331510'}\n"
-     ]
-    }
-   ],
+   "execution_count": 208,
+   "outputs": [],
    "source": [
     "url = 'https://www.melon.com/chart/index.htm'\n",
     "rec_hearder_dict = {\n",
@@ -180,112 +73,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": null,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 사랑은 늘 도망가\n",
-      "2 취중고백\n",
+      "1 취중고백\n",
+      "2 사랑은 늘 도망가\n",
       "3 호랑수월가\n",
       "4 Step Back\n",
-      "5 회전목마 (Feat. Zion.T, 원슈타인) (Prod. Slom)\n",
-      "6 ELEVEN\n",
+      "5 ELEVEN\n",
+      "6 회전목마 (Feat. Zion.T, 원슈타인) (Prod. Slom)\n",
       "7 리무진 (Feat. MINO) (Prod. GRAY)\n",
       "8 Counting Stars (Feat. Beenzino)\n",
       "9 Dreams Come True\n",
       "10 눈이 오잖아(Feat.헤이즈)\n",
-      "11 이제 나만 믿어요\n",
+      "11 다정히 내 이름을 부르면\n",
       "12 Can't Control Myself\n",
       "13 겨울잠\n",
-      "14 다정히 내 이름을 부르면\n",
-      "15 신호등\n",
-      "16 만남은 쉽고 이별은 어려워 (Feat. Leellamarz) (Prod. TOIL)\n",
-      "17 STAY\n",
-      "18 다시 사랑한다면 (김필 Ver.)\n",
-      "19 그대라는 사치\n",
-      "20 Next Level\n",
-      "21 strawberry moon\n",
-      "22 SMILEY (Feat. BIBI)\n",
-      "23 Christmas Tree\n",
-      "24 별빛 같은 나의 사랑아\n",
-      "25 드라마\n",
-      "26 잊었니\n",
-      "27 Savage\n",
+      "14 이제 나만 믿어요\n",
+      "15 SMILEY (Feat. BIBI)\n",
+      "16 STAY\n",
+      "17 만남은 쉽고 이별은 어려워 (Feat. Leellamarz) (Prod. TOIL)\n",
+      "18 신호등\n",
+      "19 Next Level\n",
+      "20 strawberry moon\n",
+      "21 Savage\n",
+      "22 Christmas Tree\n",
+      "23 드라마\n",
+      "24 그대라는 사치\n",
+      "25 다시 사랑한다면 (김필 Ver.)\n",
+      "26 별빛 같은 나의 사랑아\n",
+      "27 우리가 헤어져야 했던 이유\n",
       "28 언덕나무\n",
-      "29 HERO\n",
-      "30 끝사랑\n",
-      "31 우리가 헤어져야 했던 이유\n",
-      "32 서랍\n",
-      "33 Bk Love\n",
-      "34 흰눈\n",
-      "35 너 아니면 안돼\n",
+      "29 서랍\n",
+      "30 흰눈\n",
+      "31 잊었니\n",
+      "32 HERO\n",
+      "33 abcdefu\n",
+      "34 너를 생각해\n",
+      "35 끝사랑\n",
       "36 Butter\n",
-      "37 너를 생각해\n",
+      "37 OHAYO MY NIGHT\n",
       "38 사랑이 아니었다고 말하지 마요\n",
-      "39 abcdefu\n",
-      "40 Child\n",
-      "41 OHAYO MY NIGHT\n",
-      "42 Dynamite\n",
-      "43 계단말고 엘리베이터\n",
-      "44 네가 없는 밤 (Feat. ASH ISLAND) (Prod. GRAY)\n",
-      "45 불협화음 (Feat. AKMU) (Prod. GRAY)\n",
-      "46 Permission to Dance\n",
-      "47 문득\n",
-      "48 여름비\n",
-      "49 바라만 본다\n",
-      "50 My Universe\n",
-      "51 Weekend\n",
-      "52 쉬어 (Feat. MINO) (Prod. GRAY)\n",
-      "53 Celebrity\n",
-      "54 낙하 (with 아이유)\n",
-      "55 Wake Up (Prod. 코드 쿤스트)\n",
-      "56 그게 더 편할 것 같아 (N번째 연애 X 멜로망스)\n",
-      "57 Good Night (Feat. BE'O)\n",
-      "58 이별후회\n",
-      "59 라일락\n",
-      "60 밤하늘의 별을(2020)\n",
-      "61 헤픈 우연\n",
-      "62 Bad Habits\n",
-      "63 사이렌 Remix (Feat. UNEDUCATED KID, Paul Blanco)\n",
-      "64 강변북로\n",
-      "65 찰나가 영원이 될 때 (The Eternal Moment)\n",
-      "66 어떻게 이별까지 사랑하겠어, 널 사랑하는 거지\n",
-      "67 모든 날, 모든 순간 (Every day, Every Moment)\n",
-      "68 고백\n",
-      "69 내 손을 잡아\n",
-      "70 DM\n",
-      "71 대낮에 한 이별\n",
-      "72 Off My Face\n",
-      "73 안녕 우린 헤어져야만 해\n",
-      "74 너의 모든 순간\n",
-      "75 추억은 만남보다 이별에 남아\n",
-      "76 Because\n",
-      "77 롤린 (Rollin')\n",
-      "78 봄날\n",
-      "79 Dun Dun Dance\n",
-      "80 밝게 빛나는 별이 되어 비춰줄게\n",
-      "81 Blueming\n",
-      "82 오늘도 빛나는 너에게 (To You My Light) (Feat.이라온)\n",
-      "83 작은 것들을 위한 시 (Boy With Luv) (Feat. Halsey)\n",
-      "84 검정색하트 (Feat. Leellamarz, BE'O)\n",
-      "85 취기를 빌려 (취향저격 그녀 X 산들)\n",
-      "86 그날에 나는 맘이 편했을까\n",
-      "87 시간을 거슬러 (낮에 뜨는 달 X 케이윌)\n",
-      "88 오묘해\n",
-      "89 Savage Love (Laxed - Siren Beat) (BTS Remix)\n",
-      "90 비가 오는 날엔 (2021)\n",
-      "91 Queendom\n",
-      "92 WA DA DA\n",
-      "93 멜로디\n",
-      "94 못해준 게 많아서\n",
-      "95 Life Goes On\n",
-      "96 좋아좋아\n",
-      "97 나 그댈위해 시 한편을 쓰겠어\n",
-      "98 깨우지 마\n",
-      "99 Still I Love You\n",
-      "100 MBTI (Feat. 쿠기 & 로꼬) (Prod. GRAY)\n"
+      "39 문득\n",
+      "40 네가 없는 밤 (Feat. ASH ISLAND) (Prod. GRAY)\n",
+      "41 Bk Love\n",
+      "42 불협화음 (Feat. AKMU) (Prod. GRAY)\n",
+      "43 너 아니면 안돼\n"
      ]
     }
    ],
@@ -348,7 +184,8 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n"
+     "name": "#%%\n",
+     "is_executing": true
     }
    }
   },
