--- a/06melon100chart.ipynb
+++ b/06melon100chart.ipynb
@@ -44,8 +44,10 @@
     "    # print(len(soup.select(\"div#tb_list tr a[href*='playSong']\")))\n",
     "    a_tags = soup.select(\"div#tb_list tr a[href*='playSong']\")\n",
     "    song_info_list = []\n",
+    "    #노래 100곡의 정보를 저장할 list\n",
     "    for idx,a_tag in enumerate(a_tags,1):\n",
     "        song_dict = {}\n",
+    "        #노래 1곡의 정보를 저장할 dict 선언 (제목, songid, url)\n",
     "        song_title = a_tag.text\n",
     "        href_value = a_tag['href']\n",
     "        song_dict['song_title'] = song_title\n",
@@ -73,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 209,
    "outputs": [
     {
      "name": "stdout",
@@ -121,7 +123,64 @@
       "40 네가 없는 밤 (Feat. ASH ISLAND) (Prod. GRAY)\n",
       "41 Bk Love\n",
       "42 불협화음 (Feat. AKMU) (Prod. GRAY)\n",
-      "43 너 아니면 안돼\n"
+      "43 너 아니면 안돼\n",
+      "44 Dynamite\n",
+      "45 바라만 본다\n",
+      "46 Permission to Dance\n",
+      "47 Child\n",
+      "48 여름비\n",
+      "49 My Universe\n",
+      "50 Weekend\n",
+      "51 쉬어 (Feat. MINO) (Prod. GRAY)\n",
+      "52 낙하 (with 아이유)\n",
+      "53 Celebrity\n",
+      "54 Wake Up (Prod. 코드 쿤스트)\n",
+      "55 그게 더 편할 것 같아 (N번째 연애 X 멜로망스)\n",
+      "56 밤하늘의 별을(2020)\n",
+      "57 라일락\n",
+      "58 헤픈 우연\n",
+      "59 사이렌 Remix (Feat. UNEDUCATED KID, Paul Blanco)\n",
+      "60 이별후회\n",
+      "61 Bad Habits\n",
+      "62 Good Night (Feat. BE'O)\n",
+      "63 찰나가 영원이 될 때 (The Eternal Moment)\n",
+      "64 모든 날, 모든 순간 (Every day, Every Moment)\n",
+      "65 고백\n",
+      "66 어떻게 이별까지 사랑하겠어, 널 사랑하는 거지\n",
+      "67 Off My Face\n",
+      "68 내 손을 잡아\n",
+      "69 추억은 만남보다 이별에 남아\n",
+      "70 계단말고 엘리베이터\n",
+      "71 Dun Dun Dance\n",
+      "72 너의 모든 순간\n",
+      "73 롤린 (Rollin')\n",
+      "74 Blueming\n",
+      "75 밝게 빛나는 별이 되어 비춰줄게\n",
+      "76 안녕 우린 헤어져야만 해\n",
+      "77 봄날\n",
+      "78 오늘도 빛나는 너에게 (To You My Light) (Feat.이라온)\n",
+      "79 DM\n",
+      "80 취기를 빌려 (취향저격 그녀 X 산들)\n",
+      "81 작은 것들을 위한 시 (Boy With Luv) (Feat. Halsey)\n",
+      "82 그날에 나는 맘이 편했을까\n",
+      "83 시간을 거슬러 (낮에 뜨는 달 X 케이윌)\n",
+      "84 Because\n",
+      "85 Queendom\n",
+      "86 비가 오는 날엔 (2021)\n",
+      "87 멜로디\n",
+      "88 Savage Love (Laxed - Siren Beat) (BTS Remix)\n",
+      "89 강변북로\n",
+      "90 나 그댈위해 시 한편을 쓰겠어\n",
+      "91 좋아좋아\n",
+      "92 오묘해\n",
+      "93 Life Goes On\n",
+      "94 검정색하트 (Feat. Leellamarz, BE'O)\n",
+      "95 WA DA DA\n",
+      "96 DUMB DUMB\n",
+      "97 대낮에 한 이별\n",
+      "98 MBTI (Feat. 쿠기 & 로꼬) (Prod. GRAY)\n",
+      "99 Still I Love You\n",
+      "100 정거장\n"
      ]
     }
    ],
@@ -129,7 +188,8 @@
     "song_detail_list = []\n",
     "\n",
     "for idx,song in enumerate(song_info_list,1):\n",
-    "    #노래 1곡의 상세정보를 저장할 dict\n",
+    "    #위에서 저장한 url을 통해 정보를 get\n",
+    "    #노래 1곡의 상세정보(곡명,가수,좋아요,장르...)를 저장할 dict\n",
     "    song_detail_dict = {}\n",
     "\n",
     "    # print(song['song_detail_url'])\n",
@@ -156,10 +216,13 @@
     "\n",
     "\n",
     "        song_id = song['song_id']\n",
+    "        #좋아요 개수를 구하기 위해 request를 다시 날림!\n",
     "        like_url = f'https://www.melon.com/commonlike/getSongLike.json?contsIds={song_id}'\n",
     "        like_res = requests.get(like_url,headers=rec_hearder_dict)\n",
     "\n",
+    "        #개발자도구에서 network로가서 구함\n",
     "        likes_count = like_res.json()['contsLike'][0]['SUMMCNT']\n",
+    "\n",
     "\n",
     "        song_detail_dict['좋아요'] = likes_count\n",
     "    #노래가사\n",
@@ -184,8 +247,7 @@
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
     }
    }
   },
