add database study

--- a/07행정구역정보분석.ipynb
+++ b/07행정구역정보분석.ipynb
@@ -490,11 +490,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 225,
    "outputs": [],
    "source": [
     "#경기도에서 인구수가 가장 많은 행정구역은?\n",
     "pop_max_value = data.loc[data['광역시도'] == '경기도','인구수'].max()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "\n"
    ],
    "metadata": {
@@ -506,14 +511,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 226,
    "outputs": [
     {
      "data": {
       "text/plain": "    Unnamed: 0      인구수 shortName  x  y      면적 광역시도 행정구역\n30          30  1125461        수원  6  9  121.09  경기도  수원시",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Unnamed: 0</th>\n      <th>인구수</th>\n      <th>shortName</th>\n      <th>x</th>\n      <th>y</th>\n      <th>면적</th>\n      <th>광역시도</th>\n      <th>행정구역</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>30</th>\n      <td>30</td>\n      <td>1125461</td>\n      <td>수원</td>\n      <td>6</td>\n      <td>9</td>\n      <td>121.09</td>\n      <td>경기도</td>\n      <td>수원시</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 50,
+     "execution_count": 226,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,13 +537,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 227,
    "outputs": [],
    "source": [
     "#sido_name (광역시도)을 argument로 받아서, 특정 광역시도중에서 가장 인구가 많은 행정구역을 반환하는 함수 정의하기\n",
     "def get_pop_max_city(sido_name):\n",
     "    pop_max_value = data.loc[data['광역시도'] == sido_name,'인구수'].max()\n",
-    "    return data.loc[(data['광역시도'] == sido_name)&(data['인구수'] == pop_max_value),['광역시도','행정구역','인구수']]"
+    "    return data.loc[(data['광역시도'] == sido_name)&(data['인구수'] == pop_max_value),['광역시도','행정구역','인구수','면적']]\n"
    ],
    "metadata": {
     "collapsed": false,
@@ -549,14 +554,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 228,
    "outputs": [
     {
      "data": {
-      "text/plain": "      광역시도 행정구역     인구수\n141  서울특별시  송파구  615487",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>광역시도</th>\n      <th>행정구역</th>\n      <th>인구수</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>141</th>\n      <td>서울특별시</td>\n      <td>송파구</td>\n      <td>615487</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "      광역시도 행정구역     인구수    면적\n141  서울특별시  송파구  615487  33.9",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>광역시도</th>\n      <th>행정구역</th>\n      <th>인구수</th>\n      <th>면적</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>141</th>\n      <td>서울특별시</td>\n      <td>송파구</td>\n      <td>615487</td>\n      <td>33.9</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 56,
+     "execution_count": 228,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -573,22 +578,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 205,
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "강원도\n",
+      "경기도\n",
+      "경상남도\n",
+      "경상북도\n",
+      "광주광역시\n",
+      "대구광역시\n",
+      "대전광역시\n",
+      "부산광역시\n",
+      "서울특별시\n",
+      "세종특별자치시\n",
+      "울산광역시\n",
+      "인천광역시\n",
+      "전라남도\n",
+      "전라북도\n",
+      "제주특별자치도\n",
+      "충청남도\n",
+      "충청북도\n"
+     ]
+    },
+    {
      "data": {
-      "text/plain": "       광역시도  행정구역      인구수\n0       강원도   원주시   313851\n1       경기도   수원시  1125461\n2      경상남도   창원시  1010040\n3      경상북도   포항시   488395\n4     광주광역시    북구   439683\n5     대구광역시   달서구   584517\n6     대전광역시    서구   475094\n7     부산광역시  해운대구   397134\n8     서울특별시   송파구   615487\n9   세종특별자치시   세종시   191233\n10    울산광역시    남구   327270\n11    인천광역시   부평구   527153\n12     전라남도   여수시   263166\n13     전라북도   전주시   630708\n14  제주특별자치도   제주시   430504\n15     충청남도   천안시   584912\n16     충청북도   청주시   790216",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>광역시도</th>\n      <th>행정구역</th>\n      <th>인구수</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>강원도</td>\n      <td>원주시</td>\n      <td>313851</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>경기도</td>\n      <td>수원시</td>\n      <td>1125461</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>경상남도</td>\n      <td>창원시</td>\n      <td>1010040</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>경상북도</td>\n      <td>포항시</td>\n      <td>488395</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>광주광역시</td>\n      <td>북구</td>\n      <td>439683</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>대구광역시</td>\n      <td>달서구</td>\n      <td>584517</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>대전광역시</td>\n      <td>서구</td>\n      <td>475094</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>부산광역시</td>\n      <td>해운대구</td>\n      <td>397134</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>서울특별시</td>\n      <td>송파구</td>\n      <td>615487</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>세종특별자치시</td>\n      <td>세종시</td>\n      <td>191233</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>울산광역시</td>\n      <td>남구</td>\n      <td>327270</td>\n    </tr>\n    <tr>\n      <th>11</th>\n      <td>인천광역시</td>\n      <td>부평구</td>\n      <td>527153</td>\n    </tr>\n    <tr>\n      <th>12</th>\n      <td>전라남도</td>\n      <td>여수시</td>\n      <td>263166</td>\n    </tr>\n    <tr>\n      <th>13</th>\n      <td>전라북도</td>\n      <td>전주시</td>\n      <td>630708</td>\n    </tr>\n    <tr>\n      <th>14</th>\n      <td>제주특별자치도</td>\n      <td>제주시</td>\n      <td>430504</td>\n    </tr>\n    <tr>\n      <th>15</th>\n      <td>충청남도</td>\n      <td>천안시</td>\n      <td>584912</td>\n    </tr>\n    <tr>\n      <th>16</th>\n      <td>충청북도</td>\n      <td>청주시</td>\n      <td>790216</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "Empty DataFrame\nColumns: [광역시도, 행정구역, 인구수, 면적]\nIndex: []",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>광역시도</th>\n      <th>행정구역</th>\n      <th>인구수</th>\n      <th>면적</th>\n    </tr>\n  </thead>\n  <tbody>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 61,
+     "execution_count": 205,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pop_max_city_df = pd.DataFrame(columns=['광역시도','행정구역','인구수'])\n",
+    "pop_max_city_df = pd.DataFrame(columns=['광역시도','행정구역','인구수','면적'])\n",
     "for sido_name in data['광역시도'].unique():\n",
-    "    pop_max_city_df = pop_max_city_df.append(get_pop_max_city(sido_name)).reset_index(drop=True)\n",
+    "\n",
+    "\n",
     "\n",
     "pop_max_city_df\n"
    ],
@@ -614,6 +643,42 @@
     "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "   Unnamed: 0     인구수 shortName   x  y       면적 광역시도 행정구역\n0           0  202520        강릉  11  4  1040.07  강원도  강릉시\n1           1   25589    고성(강원)   9  0   664.19  강원도  고성군\n2           2   86747        동해  11  5   180.01  강원도  동해시\n3           3   63986        삼척  11  8  1185.80  강원도  삼척시\n4           4   76733        속초   9  1   105.25  강원도  속초시",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Unnamed: 0</th>\n      <th>인구수</th>\n      <th>shortName</th>\n      <th>x</th>\n      <th>y</th>\n      <th>면적</th>\n      <th>광역시도</th>\n      <th>행정구역</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>202520</td>\n      <td>강릉</td>\n      <td>11</td>\n      <td>4</td>\n      <td>1040.07</td>\n      <td>강원도</td>\n      <td>강릉시</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>25589</td>\n      <td>고성(강원)</td>\n      <td>9</td>\n      <td>0</td>\n      <td>664.19</td>\n      <td>강원도</td>\n      <td>고성군</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2</td>\n      <td>86747</td>\n      <td>동해</td>\n      <td>11</td>\n      <td>5</td>\n      <td>180.01</td>\n      <td>강원도</td>\n      <td>동해시</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>3</td>\n      <td>63986</td>\n      <td>삼척</td>\n      <td>11</td>\n      <td>8</td>\n      <td>1185.80</td>\n      <td>강원도</td>\n      <td>삼척시</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>4</td>\n      <td>76733</td>\n      <td>속초</td>\n      <td>9</td>\n      <td>1</td>\n      <td>105.25</td>\n      <td>강원도</td>\n      <td>속초시</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 194,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
     }
    }
   },
