--- a/08.Pymysql과MariaDB연동.ipynb
+++ b/08.Pymysql과MariaDB연동.ipynb
@@ -34,7 +34,7 @@
     }
    ],
    "source": [
-    "!pip show pymysql"
+    "!pip show pymysql ## java의 jdbc와 같다"
    ]
   },
   {
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -200,15 +200,25 @@
       "<class 'tuple'> (3, 'S2012', '7700', '핸드폰') S2012\n",
       "0\n",
       "<class 'tuple'>\n",
+      "<class 'tuple'> (1, 'S2010', '7700', '핸드폰')\n",
       "1 S2010 7700 핸드폰\n",
+      "<class 'tuple'> (2, 'S2011', '7700', '핸드폰')\n",
       "2 S2011 7700 핸드폰\n",
+      "<class 'tuple'> (3, 'S2012', '7700', '핸드폰')\n",
       "3 S2012 7700 핸드폰\n",
+      "<class 'tuple'> (4, 'S2013', '7700', '핸드폰')\n",
       "4 S2013 7700 핸드폰\n",
+      "<class 'tuple'> (5, 'S2014', '7700', '핸드폰')\n",
       "5 S2014 7700 핸드폰\n",
+      "<class 'tuple'> (6, 'S2015', '7700', '핸드폰')\n",
       "6 S2015 7700 핸드폰\n",
+      "<class 'tuple'> (7, 'S2016', '7700', 'Phone')\n",
       "7 S2016 7700 Phone\n",
+      "<class 'tuple'> (8, 'S2017', '7700', 'Phone')\n",
       "8 S2017 7700 Phone\n",
+      "<class 'tuple'> (9, 'S2018', '7700', 'Phone')\n",
       "9 S2018 7700 Phone\n",
+      "<class 'tuple'> (10, 'S2019', '7700', 'Phone')\n",
       "10 S2019 7700 Phone\n",
       "('Phone', 4)\n",
       "('핸드폰', 6)\n"
@@ -235,14 +245,15 @@
     "        db.commit()\n",
     "        #갱신된 row 갯수\n",
     "        print(cursor.rowcount)\n",
-    "        \n",
+    "        #\n",
     "        cursor.execute('select * from product')\n",
     "        result_list = cursor.fetchall()\n",
     "        print(type(result_list))\n",
     "        for row in result_list:\n",
+    "            print(type(row),row)\n",
     "            print(row[0],row[1],row[2],row[3])\n",
-    "            \n",
-    "        # model_type별로 group by 하는 쿼리 실행 \n",
+    "        #\n",
+    "        # # model_type별로 group by 하는 쿼리 실행\n",
     "        cursor.execute('select model_type,count(*) from product group by model_type')\n",
     "        for row in cursor.fetchall():\n",
     "            print(row)\n",
