add database study

--- a/06melon100chart.ipynb
+++ b/06melon100chart.ipynb
@@ -847,7 +847,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### SqlAlchemy 와 Pymysql를 사용하여 DataFrame 객체를 DB에 저장하기"
+    "# SqlAlchemy 와 Pymysql를 사용하여 DataFrame 객체를 DB에 저장하기"
    ],
    "metadata": {
     "collapsed": false
@@ -1098,9 +1098,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 40,
    "outputs": [],
-   "source": [],
+   "source": [
+    "#database에서 album을 찾는 함수\n",
+    "def search_album(keyword):\n",
+    "    sql = \"\"\"select * from songs100 where album like %s; \"\"\"\n",
+    "    import pymysql\n",
+    "    import sqlalchemy\n",
+    "\n",
+    "    #pymysql과 sqlalchemy연동\n",
+    "    pymysql.install_as_MySQLdb()\n",
+    "    from sqlalchemy import create_engine\n",
+    "\n",
+    "    try:\n",
+    "\n",
+    "        engine = create_engine('mysql+pymysql://python:python@localhost:3306/python_db',encoding = 'utf-8')\n",
+    "        conn = engine.connect()\n",
+    "\n",
+    "        album_df = pd.read_sql_query(sql,con=conn,params=('%'+keyword+'%',)) #select * from songs100 where album like %album%;\n",
+    "        print(album_df.shape)\n",
+    "        return(album_df)\n",
+    "    finally:\n",
+    "        print('finally') ##log 찍어봄\n",
+    "        conn.close()\n",
+    "        engine.dispose()\n"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
@@ -1110,9 +1133,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(10, 8)\n",
+      "finally\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "   id                                  title        singer  \\\n5  58                                    여름비  샘김 (Sam Kim)   \n2  30                                   언덕나무           이승윤   \n1  27                         Christmas Tree             V   \n6  64                                   이별후회           김나영   \n3  33                         우리가 헤어져야 했던 이유     비비 (BIBI)   \n4  34                                     서랍          10CM   \n0   1                              사랑은 늘 도망가           임영웅   \n7  67  모든 날, 모든 순간 (Every day, Every Moment)            폴킴   \n8  72                               너의 모든 순간           성시경   \n9  74                                내 손을 잡아           아이유   \n\n                     album release_date          genre   likes  \\\n5       그 해 우리는 OST Part.8   2022.01.10  포크/블루스, 국내드라마   26220   \n2       그 해 우리는 OST Part.7   2022.01.04     발라드, 국내드라마   38422   \n1       그 해 우리는 OST Part.5   2021.12.24     발라드, 국내드라마   75419   \n6       그 해 우리는 OST Part.4   2021.12.21     발라드, 국내드라마   26358   \n3       그 해 우리는 OST Part.2   2021.12.13     발라드, 국내드라마   42405   \n4       그 해 우리는 OST Part.1   2021.12.07     발라드, 국내드라마   39107   \n0       신사와 아가씨 OST Part.2   2021.10.11     발라드, 국내드라마  124894   \n7  '키스 먼저 할까요?' OST Part.3   2018.03.20     발라드, 국내드라마  386010   \n8      별에서 온 그대 OST Part.7   2014.02.12     발라드, 국내드라마  189737   \n9        최고의 사랑 OST Part.4   2011.05.25     발라드, 국내드라마  180774   \n\n                                               lyric  \n5  우리 같이 걷던 곳그 골목 어귀 어딘가너와 나누곤 했던수줍었던 얘기들너는 나를 쉬게...  \n2  높은 언덕 나무처럼너의 기억은 내게쉬었다가는 편한 그늘이었어어느덧 내가어른이 다 되...  \n1  In this momentI see youIt always comes aroundA...  \n6  어느새 어둠이 내린 거리에깊이 숨겨 두었던 너의 기억나도 모르게 꺼내어 놓았어우리 ...  \n3  Maybe If IWoke up in the morningHearing your v...  \n4  어린 햇살 아래서뛰어놀곤 했었던가쁜 숨결굽이진 골목 지나길을 따라가보면같은 기억어른...  \n0  눈물이 난다 이 길을 걸으면그 사람 손길이 자꾸 생각이 난다붙잡지 못하고 가슴만 떨...  \n7  네가 없이 웃을 수 있을까생각만 해도 눈물이나힘든 시간 날 지켜준 사람이제는 내가 ...  \n8  이윽고 내가 한눈에너를 알아봤을 때모든 건 분명 달라지고 있었어내 세상은 널 알기 ...  \n9  느낌이 오잖아 떨리고 있잖아언제까지 눈치만 볼 거니네 맘을 말해봐 딴청 피우지 말란...  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>id</th>\n      <th>title</th>\n      <th>singer</th>\n      <th>album</th>\n      <th>release_date</th>\n      <th>genre</th>\n      <th>likes</th>\n      <th>lyric</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>5</th>\n      <td>58</td>\n      <td>여름비</td>\n      <td>샘김 (Sam Kim)</td>\n      <td>그 해 우리는 OST Part.8</td>\n      <td>2022.01.10</td>\n      <td>포크/블루스, 국내드라마</td>\n      <td>26220</td>\n      <td>우리 같이 걷던 곳그 골목 어귀 어딘가너와 나누곤 했던수줍었던 얘기들너는 나를 쉬게...</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>30</td>\n      <td>언덕나무</td>\n      <td>이승윤</td>\n      <td>그 해 우리는 OST Part.7</td>\n      <td>2022.01.04</td>\n      <td>발라드, 국내드라마</td>\n      <td>38422</td>\n      <td>높은 언덕 나무처럼너의 기억은 내게쉬었다가는 편한 그늘이었어어느덧 내가어른이 다 되...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>27</td>\n      <td>Christmas Tree</td>\n      <td>V</td>\n      <td>그 해 우리는 OST Part.5</td>\n      <td>2021.12.24</td>\n      <td>발라드, 국내드라마</td>\n      <td>75419</td>\n      <td>In this momentI see youIt always comes aroundA...</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>64</td>\n      <td>이별후회</td>\n      <td>김나영</td>\n      <td>그 해 우리는 OST Part.4</td>\n      <td>2021.12.21</td>\n      <td>발라드, 국내드라마</td>\n      <td>26358</td>\n      <td>어느새 어둠이 내린 거리에깊이 숨겨 두었던 너의 기억나도 모르게 꺼내어 놓았어우리 ...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>33</td>\n      <td>우리가 헤어져야 했던 이유</td>\n      <td>비비 (BIBI)</td>\n      <td>그 해 우리는 OST Part.2</td>\n      <td>2021.12.13</td>\n      <td>발라드, 국내드라마</td>\n      <td>42405</td>\n      <td>Maybe If IWoke up in the morningHearing your v...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>34</td>\n      <td>서랍</td>\n      <td>10CM</td>\n      <td>그 해 우리는 OST Part.1</td>\n      <td>2021.12.07</td>\n      <td>발라드, 국내드라마</td>\n      <td>39107</td>\n      <td>어린 햇살 아래서뛰어놀곤 했었던가쁜 숨결굽이진 골목 지나길을 따라가보면같은 기억어른...</td>\n    </tr>\n    <tr>\n      <th>0</th>\n      <td>1</td>\n      <td>사랑은 늘 도망가</td>\n      <td>임영웅</td>\n      <td>신사와 아가씨 OST Part.2</td>\n      <td>2021.10.11</td>\n      <td>발라드, 국내드라마</td>\n      <td>124894</td>\n      <td>눈물이 난다 이 길을 걸으면그 사람 손길이 자꾸 생각이 난다붙잡지 못하고 가슴만 떨...</td>\n    </tr>\n    <tr>\n      <th>7</th>\n      <td>67</td>\n      <td>모든 날, 모든 순간 (Every day, Every Moment)</td>\n      <td>폴킴</td>\n      <td>'키스 먼저 할까요?' OST Part.3</td>\n      <td>2018.03.20</td>\n      <td>발라드, 국내드라마</td>\n      <td>386010</td>\n      <td>네가 없이 웃을 수 있을까생각만 해도 눈물이나힘든 시간 날 지켜준 사람이제는 내가 ...</td>\n    </tr>\n    <tr>\n      <th>8</th>\n      <td>72</td>\n      <td>너의 모든 순간</td>\n      <td>성시경</td>\n      <td>별에서 온 그대 OST Part.7</td>\n      <td>2014.02.12</td>\n      <td>발라드, 국내드라마</td>\n      <td>189737</td>\n      <td>이윽고 내가 한눈에너를 알아봤을 때모든 건 분명 달라지고 있었어내 세상은 널 알기 ...</td>\n    </tr>\n    <tr>\n      <th>9</th>\n      <td>74</td>\n      <td>내 손을 잡아</td>\n      <td>아이유</td>\n      <td>최고의 사랑 OST Part.4</td>\n      <td>2011.05.25</td>\n      <td>발라드, 국내드라마</td>\n      <td>180774</td>\n      <td>느낌이 오잖아 떨리고 있잖아언제까지 눈치만 볼 거니네 맘을 말해봐 딴청 피우지 말란...</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Ost_album =search_album('ost')\n",
+    "Ost_album.sort_values(by='release_date',ascending=False)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Songs100 테이블에 insert 하기\n",
+    "* sqlalchemy를 사용하여 레코드 insert하기\n",
+    "* id(pk 칼럼) 속성을 auto_increment로 변경해주기"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "outputs": [],
-   "source": [],
+   "source": [
+    "import pymysql\n",
+    "import sqlalchemy\n",
+    "\n",
+    "#pymysql과 sqlalchemy연동\n",
+    "pymysql.install_as_MySQLdb()\n",
+    "from sqlalchemy import create_engine\n",
+    "from sqlalchemy.sql import text\n",
+    "\n",
+    "try:\n",
+    "    #engine = create_engine('mysql+pymysql://scott(username):tiger(passowrd)@localhost:portnumber/foo(database_name_')\n",
+    "    engine = create_engine('mysql+pymysql://python:python@localhost:3306/python_db',encoding = 'utf-8')\n",
+    "    #cursor을 열어놓고 하는것처럼\n",
+    "    with engine.connect() as conn:\n",
+    "        auto_incre_sql = text(\"\"\"alter table songs100 modify id int auto_increment;\"\"\") #id라는 컬럼을 type을 int로 변경하고 auto_increment로 수정하겠다.\n",
+    "\n",
+    "        conn.execute(auto_incre_sql)\n",
+    "\n",
+    "        #insert할 튜플\n",
+    "        #['title','singer','album','release_date','genre','likes','lyric']\n",
+    "        values_tuple = ({'title':'동요제목','singer':'둘리','album':'둘리앨범','release_date':'2022-02-09','genre':'동요','likes':100,'lyric':''},) ##튜플에는 마지막에 , 찍어야한다.\n",
+    "        ##id는 자동생성이므로 insert into 컬럼명 values 으로가야한다.\n",
+    "        ### 그리고 컬럼명과 values_tuple의 컬럼명을 mapping해줘야한다.\n",
+    "        insert_sql = text(\n",
+    "            \"\"\"insert into songs100 (title,singer,album,release_date,genre,likes,lyric) values (:title,:singer,:album,:release_date,:genre,:likes,:lyric)\"\"\")\n",
+    "        for value in values_tuple:\n",
+    "            conn.execute(insert_sql,**value) ## **는 딕셔너리 values_tuple에서 for문을 통해서 value를 꺼내면 dict가 된다\n",
+    "\n",
+    "\n",
+    "\n",
+    "finally:\n",
+    "    conn.close()\n",
+    "    engine.dispose()"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
