new scraping file

--- a/07행정구역정보분석.ipynb
+++ b/07행정구역정보분석.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -33,7 +33,7 @@
       "text/plain": "   Unnamed: 0     인구수 shortName   x  y       면적 광역시도 행정구역\n0           0  202520        강릉  11  4  1040.07  강원도  강릉시\n1           1   25589    고성(강원)   9  0   664.19  강원도  고성군\n2           2   86747        동해  11  5   180.01  강원도  동해시\n3           3   63986        삼척  11  8  1185.80  강원도  삼척시\n4           4   76733        속초   9  1   105.25  강원도  속초시",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Unnamed: 0</th>\n      <th>인구수</th>\n      <th>shortName</th>\n      <th>x</th>\n      <th>y</th>\n      <th>면적</th>\n      <th>광역시도</th>\n      <th>행정구역</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0</td>\n      <td>202520</td>\n      <td>강릉</td>\n      <td>11</td>\n      <td>4</td>\n      <td>1040.07</td>\n      <td>강원도</td>\n      <td>강릉시</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>1</td>\n      <td>25589</td>\n      <td>고성(강원)</td>\n      <td>9</td>\n      <td>0</td>\n      <td>664.19</td>\n      <td>강원도</td>\n      <td>고성군</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2</td>\n      <td>86747</td>\n      <td>동해</td>\n      <td>11</td>\n      <td>5</td>\n      <td>180.01</td>\n      <td>강원도</td>\n      <td>동해시</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>3</td>\n      <td>63986</td>\n      <td>삼척</td>\n      <td>11</td>\n      <td>8</td>\n      <td>1185.80</td>\n      <td>강원도</td>\n      <td>삼척시</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>4</td>\n      <td>76733</td>\n      <td>속초</td>\n      <td>9</td>\n      <td>1</td>\n      <td>105.25</td>\n      <td>강원도</td>\n      <td>속초시</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 41,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -648,9 +648,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
+   "execution_count": 12,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "        광역시도  행정구역      인구수   면젹  Unnamed: 0 shortName     x     y       면적\n",
+      "8        강원도   원주시   313851  NaN         8.0        원주  10.0   7.0   867.30\n",
+      "15       강원도   홍천군    62957  NaN        15.0        홍천  10.0   4.0  1817.94\n",
+      "30       경기도   수원시  1125461  NaN        30.0        수원   6.0   9.0   121.09\n",
+      "36       경기도   양평군    95614  NaN        36.0        양평   9.0   6.0   877.08\n",
+      "61      경상남도   창원시  1010040  NaN        61.0        창원   7.0  18.0   734.87\n",
+      "66      경상남도   합천군    42515  NaN        66.0        합천   7.0  14.0   983.42\n",
+      "77      경상북도   안동시   157317  NaN        77.0        안동  10.0  10.0  1519.00\n",
+      "89      경상북도   포항시   488395  NaN        89.0        포항  12.0  11.0  1127.00\n",
+      "90     광주광역시   광산구   389386  NaN        90.0      광주광산   2.0  19.0   222.88\n",
+      "93     광주광역시    북구   439683  NaN        93.0      광주북구   3.0  19.0   121.74\n",
+      "96     대구광역시   달서구   584517  NaN        96.0      대구달서   8.0  15.0    62.30\n",
+      "97     대구광역시   달성군   178203  NaN        97.0      대구달성   9.0  15.0   427.03\n",
+      "105    대전광역시    서구   475094  NaN       105.0      대전서구   4.0  14.0    95.25\n",
+      "106    대전광역시   유성구   321618  NaN       106.0      대전유성   4.0  13.0   177.16\n",
+      "110    부산광역시   기장군   142223  NaN       110.0      부산기장  12.0  16.0   217.90\n",
+      "123    부산광역시  해운대구   397134  NaN       123.0     부산해운대  12.0  17.0    51.44\n",
+      "138    서울특별시   서초구   407416  NaN       138.0      서울서초   6.0   6.0    47.04\n",
+      "141    서울특별시   송파구   615487  NaN       141.0      서울송파   8.0   6.0    33.90\n",
+      "149  세종특별자치시   세종시   191233  NaN       149.0        세종   4.0  11.0   465.23\n",
+      "150    울산광역시    남구   327270  NaN       150.0      울산남구  12.0  15.0    72.11\n",
+      "153    울산광역시   울주군   203232  NaN       153.0      울산울주  11.0  15.0   754.93\n",
+      "155    인천광역시   강화군    58296  NaN       155.0      인천강화   1.0   3.0   411.20\n",
+      "160    인천광역시   부평구   527153  NaN       160.0      인천부평   2.0   6.0    32.00\n",
+      "175     전라남도   순천시   254751  NaN       175.0        순천   4.0  20.0   907.35\n",
+      "177     전라남도   여수시   263166  NaN       177.0        여수   4.0  21.0   501.30\n",
+      "194     전라북도   완주군    87465  NaN       194.0        완주   4.0  15.0   821.00\n",
+      "198     전라북도   전주시   630708  NaN       198.0        전주   3.0  16.0   206.45\n",
+      "202  제주특별자치도   제주시   430504  NaN       202.0        제주   4.0  24.0   977.80\n",
+      "204     충청남도   공주시   102371  NaN       204.0        공주   4.0  10.0   940.71\n",
+      "214     충청남도   천안시   584912  NaN       214.0        천안   4.0   9.0   636.50\n",
+      "227     충청북도   청주시   790216  NaN       227.0        청주   6.0  12.0   932.51\n",
+      "228     충청북도   충주시   198077  NaN       228.0        충주   6.0  10.0   983.70\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "pop_max_place = pd.DataFrame(columns=['광역시도','행정구역','인구수','면젹'])\n",
+    "\n",
+    "def max_calc(city_name):\n",
+    "    city = data.loc[data['광역시도'] == city_name]\n",
+    "    max_people = city['인구수'].max()\n",
+    "    max_area = city['면적'].max()\n",
+    "\n",
+    "    result = city.loc[(city['인구수'] == max_people) | (city['면적'] == max_area)]\n",
+    "    return result\n",
+    "\n",
+    "for location in data['광역시도'].unique():\n",
+    "    pop_max_place = pop_max_place.append(max_calc(location))\n",
+    "\n",
+    "print(pop_max_place)\n",
+    "\n"
+   ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
